--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+[B]0.9.6.2[/B]
+- Added: Poster viewtype.
+- Fixed: Low List posters.
+- Added aac to videoinfo.
+- Bugfixes.
+
+[B]0.9.6.1[/B]
+- fixed false end time.
+
 [B]0.9.6[/B]
 - Added: Music Visualization from Aeon65 - credits to creators of Aeon65.
 - Added: Bacground effect on Panels - credits to creators of Aeon65.
