--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -297,4 +297,6 @@
   <string id="31267">Enable CDArt in Music Visualization</string>
   <string id="31268">Enable Breadcrumbs</string>
   <string id="31269">Enable Background Effect</string>
+  <string id="31270">Poster Slide</string>
+  <string id="31271">Posters</string>
 </strings>
