--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -299,4 +299,5 @@
   <string id="31269">Enable Background Effect</string>
   <string id="31270">Poster Slide</string>
   <string id="31271">Posters</string>
+  <string id="31272">Layout</string>
 </strings>
