--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,5 @@
 [B]0.9.6.2[/B]
+- Added: Right navigation in Random/Recent items script runs the respective script.
 - Added: Poster viewtype.
 - Fixed: Low List posters.
 - Added aac to videoinfo.
