various tweaks and bugfixes

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -300,4 +300,5 @@
   <string id="31270">Poster Slide</string>
   <string id="31271">Posters</string>
   <string id="31272">Layout</string>
+  <string id="31273">Show Overlay</string>
 </strings>
