Added Weather+ support

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -301,4 +301,44 @@
   <string id="31271">Posters</string>
   <string id="31272">Layout</string>
   <string id="31273">Show Overlay</string>
+
+  <!-- Weather plugin -->
+  <string id="31900">MAPS</string>
+  <string id="31901">36 HOUR</string>
+  <string id="31902">HOURLY</string>
+  <string id="31903">WEEKEND</string>
+  <string id="31904">10 DAY</string>
+  <string id="31905">CURRENT</string>
+  <string id="31906">ALERTS</string>
+  <string id="31907">VIDEO</string>
+
+  <string id="31910">SATELLITE &amp; RADAR</string>
+  <string id="31911">FORECAST</string>
+  <string id="31912">CONDITIONS</string>
+  <string id="31913">SEVERE WEATHER</string>
+  <string id="31914">WEATHER OUTLOOK</string>
+
+  <string id="31923">Average High</string>
+  <string id="31924">Average Low</string>
+  <string id="31925">Record High</string>
+  <string id="31926">Record Low</string>
+  <string id="31927">Observed High</string>
+  <string id="31928">Observed Low</string>
+
+  <string id="31930">Default View</string>
+  <string id="31931">Default Map</string>
+  <string id="31932">Zoom Map</string>
+  <string id="31933">Map Pack Path</string>
+  <string id="31934">Show Details</string>
+  <string id="31935">Show RSS</string>
+  <string id="31936">Show Hourly</string>
+
+  <string id="31940">Pressure</string>
+  <string id="31941">Visibility</string>
+  <string id="31943">Statistics</string>
+  <string id="31948">Chance Precip</string>
+
+  <string id="31970">Fetching forecast info...</string>
+  <string id="31971">Click video button to play</string>
+
 </strings>
