--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.6.3[/B]
+- Added: Weather + Support
+
 [B]0.9.6.2[/B]
 - Added: Right navigation in Random/Recent items script runs the respective script.
 - Added: Poster viewtype.
