--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -301,6 +301,7 @@
   <string id="31271">Posters</string>
   <string id="31272">Layout</string>
   <string id="31273">Show Overlay</string>
+  <string id="31274">Please Choose a Layout in the Menu</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
