Added weather backdrops based on current conditions.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -302,6 +302,7 @@
   <string id="31272">Layout</string>
   <string id="31273">Show Overlay</string>
   <string id="31274">Please Choose a Layout in the Media Menu [CR] (Press Up to Activate Media Menu)</string>
+  <string id="31275">Enable Weather Backgrounds Bases on Current Conditions</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
