--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+[B]0.9.6.4[/B]
+- Fixed navigation issue in Weather +.
+- Fixed Navigation in Media Menu.
+- Added label to clarify what to do when infopanel labels are missing.
+- Added support for backgrounds based on current weather condition:
+  In System-->Skin-->General enable option and set path to folder with weather backdrops.
+- Fixed animations of Settings windows.
+
 [B]0.9.6.3[/B]
 - Added: Weather + Support
 
