changed music infopanel; less info, wider labels

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@
 - Fixed Navigation in Media Menu.
 - Added label to clarify what to do when infopanel labels are missing.
 - Added support for backgrounds based on current weather condition:
-  In System-->Skin-->General enable option and set path to folder with weather backdrops.
+  In System-->Skin-->General enable option and set path to folder with weather backdrops (not included).
 - Fixed animations of Settings windows.
 
 [B]0.9.6.3[/B]
