Added small music widget from slideshow to home as option. Enable in Home Window settings.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -303,6 +303,7 @@
   <string id="31273">Show Overlay</string>
   <string id="31274">Please Choose a Layout in the Media Menu [CR] (Press Up to Activate Media Menu)</string>
   <string id="31275">Enable Weather Backgrounds Based on Current Conditions</string>
+  <string id="31276">Use Smaller Now Playing Widget</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
