All dialogs are now effected by the setting small dialogs. (slightly bigger then scanning dialogs)

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -292,7 +292,7 @@
   <string id="31262">Detach RSS Feed from Main Menu</string>
   <string id="31263">Enable Animated Backgrounds</string>
   <string id="31264">Enable Background Effect on Panels</string>
-  <string id="31265">Smaller Scanning and Loading Dialogs</string>
+  <string id="31265">Smaller Pop-up Dialogs</string>
   <string id="31266">FORWARD</string>
   <string id="31267">Enable CDArt in Music Visualization</string>
   <string id="31268">Enable Breadcrumbs</string>
