Added fixed list option for Posters view. Added AddonWall view (not 100% finished)

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -239,12 +239,12 @@
   <string id="31197">Enable Favourite Button</string>
   <string id="31198">Extrathumbs</string>
   <string id="31199">Enable Custom Focus Offset of Main Menu on Startup</string>
-  <string id="31217">Latest Song</string>
-  <string id="31218">Latest Songs</string>
-  <string id="31219">Featured Episode</string>
-  <string id="31220">Featured Episodes</string>
-  <string id="31221">Featured Movie</string>
-  <string id="31222">Featured Movies</string>
+  <string id="31217">LATEST SONG</string>
+  <string id="31218">LATEST SONGS</string>
+  <string id="31219">FEATURED EPISODE</string>
+  <string id="31220">FEATURED EPISODES</string>
+  <string id="31221">FEATURED MOVIE</string>
+  <string id="31222">FEATURED MOVIES</string>
   <string id="31212">- Show Latest Movies Widget</string>
   <string id="31213">- Show Random Movies Widget</string>
   <string id="31214">- Show Latest Episodes Widget</string>
@@ -304,6 +304,8 @@
   <string id="31274">Please Choose a Layout in the Media Menu [CR] (Press Up to Activate Media Menu)</string>
   <string id="31275">Enable Weather Backgrounds Based on Current Conditions</string>
   <string id="31276">Use Smaller Now Playing Widget</string>
+  <string id="31277">Wrap List</string>
+  <string id="31278">Fixed List</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
