Added option for Fullscreen/windowed trailers.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -306,6 +306,7 @@
   <string id="31276">Use Smaller Now Playing Widget</string>
   <string id="31277">Wrap List</string>
   <string id="31278">Fixed List</string>
+  <string id="31279">Play Trailers in Fullscreen in all Views</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
