--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,20 @@
+[B]0.9.7[/B]
+- Added: Infopanel layout is now seperately customizable for Landscape, DVD Case and Showcase view (movies only).
+- Added: Category nodes added to breadcrumbs in movies.
+- Fixed: Logo script downloads landscape.jpg instead of folder.jpg if run through VideoInfo.
+- Added: poster.jpg and banner.jpg can now be individually downloaded through script in VideoInfo.
+- Added: Fallback to custom music backgrounds in Music Visualization.
+- Added: Videowindow in Posters view.
+- Added: Fixed list optional in Posters view (enable in media menu).
+- Added: AddonWall viewtype.
+- Added: Option to play trailers in Fullscreen or Windowed (enable in Viewtype options).
+- Changed: Trailer label moved to breadcrumbs section.
+- Changed: All dialogs are effected by the smaller dialogs setting.
+- Added: French language file - thx Rififi77
+- Added: Spanish language file - thx PatOso
+- more tweaks & fixes.
+
+
 [B]0.9.6.4[/B]
 - Fixed navigation issue in Weather +.
 - Fixed Navigation in Media Menu.
