--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 [B]0.9.7[/B]
 - Added: Infopanel layout is now seperately customizable for Landscape, DVD Case and Showcase view (movies only).
 - Added: Category nodes added to breadcrumbs in movies.
-- Fixed: Logo script downloads landscape.jpg instead of folder.jpg if run through VideoInfo.
+- Fixed: Logo script now downloads landscape.jpg instead of folder.jpg if run through VideoInfo.
 - Added: poster.jpg and banner.jpg can now be individually downloaded through script in VideoInfo.
 - Added: Fallback to custom music backgrounds in Music Visualization.
 - Added: Videowindow in Posters view.
