fixed posterwidget and landscape view

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+[B]0.9.7.1[/B]
+- Fixed layout label showing in episodes and tvshows view.
+- Disabled Landscape view for seasons.
+- Changed Wall background
+- Changed name: AddonWall=InfoWall
+- Added Album labels for InfoWall.
+- RSS background now shows when RSS is disabled and Poster widget has focus.
+
 [B]0.9.7[/B]
 - Added: Infopanel layout is now seperately customizable for Landscape, DVD Case and Showcase view (movies only).
 - Added: Category nodes added to breadcrumbs in movies.
