--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+[B]0.9.7.2[/B]
+- Changed Wall background.
+- Added InfoWall for movies.
+- Added option to show info when videoplayer is paused (enable in genereal settings).
+- Added InfoWall for Artists.
+- Fixes
+
 [B]0.9.7.1[/B]
 - Fixed layout label showing in episodes and tvshows view.
 - Disabled Landscape view for seasons.
