--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -307,6 +307,8 @@
   <string id="31277">Wrap List</string>
   <string id="31278">Fixed List</string>
   <string id="31279">Play Trailers in Fullscreen in all Views</string>
+  <string id="31280">Mediaflags</string>
+  <string id="31281">Show Video Info when Player is Paused</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
