--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -309,6 +309,7 @@
   <string id="31279">Play Trailers in Fullscreen in all Views</string>
   <string id="31280">Mediaflags</string>
   <string id="31281">Show Video Info when Player is Paused</string>
+  <string id="31282">Clear Cases</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
