--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -310,6 +310,8 @@
   <string id="31280">Mediaflags</string>
   <string id="31281">Show Video Info when Player is Paused</string>
   <string id="31282">Clear Cases</string>
+  <string id="31283">InfoWall</string>
+  <string id="31284">Cinema</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
