--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -267,8 +267,8 @@
   <string id="31237">Press LEFT to see trailer</string>
   <string id="31238">Trailer Button</string>
   <string id="31239">Trailer Label</string>
-  <string id="31240">"New" Overlay</string>
-  <string id="31241">"Watched" Overlay</string>
+  <string id="31240">Show New</string>
+  <string id="31241">Show Watched</string>
   <string id="31242">Submenu of Movies Uses Cinema Experience Script as Default</string>
   <string id="31243">Schedule</string>
   <string id="31244">Enable CDArt in Home Now Playing</string>
