--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+[B]0.9.7.5[/B]
+- Added InfoWall for Episodes/TV Shows/Advanced Launcher
+- Added Cases to InfoWall
+- Changed: New Status is now only for items that are in recent added list from script.
+- Added: Watched overlay can now be turned off.
+- Added: Fanart Image for Advanced Launcher.
+- Added: Second label for Advanced Launcher in showcase views.
+- A lot of bugfixes.
+
 [B]0.9.7.4[/B]
 - Fixed Info only visible when player is paused
 
