reworked episode infowall. Fixed fallback fanart. added optional episode no to landscape view.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -312,6 +312,7 @@
   <string id="31282">Clear Cases</string>
   <string id="31283">InfoWall</string>
   <string id="31284">Cinema</string>
+  <string id="31285">Episode No.</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
