Added optional cdart to songs in list view.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -313,6 +313,7 @@
   <string id="31283">InfoWall</string>
   <string id="31284">Cinema</string>
   <string id="31285">Episode No.</string>
+  <string id="31286">Enable CDArt in List View (only on song level)</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
