Added 4 thumbs layout. Fixed trailer label positions, added option to disable trailer layout.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -314,6 +314,8 @@
   <string id="31284">Cinema</string>
   <string id="31285">Episode No.</string>
   <string id="31286">Enable CDArt in List View (only on song level)</string>
+  <string id="31287">4 Thumbs</string>
+  <string id="31288">Disable Trailer Label</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
