--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -316,6 +316,7 @@
   <string id="31286">Enable CDArt in List View (only on song level)</string>
   <string id="31287">4 Thumbs</string>
   <string id="31288">Disable Trailer Label</string>
+  <string id="31289">Wider Menu Items</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
