updated spanish strings.

--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -231,8 +231,8 @@
   <string id="31189">Episodio Anterior</string>
   <string id="31190">Proximo Episodio</string>
   <string id="31191">Fanart mas oscuro</string>
-  <string id="31192">Miniatura de Show de TV</string>
-  <string id="31193">Logo del Show de TV</string>
+  <string id="31192">Miniatura del Show</string>
+  <string id="31193">Logo del Show</string>
   <string id="31194">Definir el ajuste de foco en Menu Principal (valor entre -2 y 14)</string>
   <string id="31195">Añadir Favoritos al Menu Principal</string>
   <string id="31196">Directorio de Favoritos</string>
@@ -283,7 +283,7 @@
   <string id="31253">Añadir Favoritos al Submenu Musica</string>
   <string id="31254">Añadir Favoritos al Submenu Series TV</string>
   <string id="31255">- Usar disco Blu-ray como predeterminado para CDArt</string>
-  <string id="31256">Usar Lista Wrapt en vistas Landscape y Showcase</string>
+  <string id="31256">Usar Lista Wrap en vistas Landscape y Showcase</string>
   <string id="31257">Detalles</string>
   <string id="31258">Info General</string>
   <string id="31259">DERECHA para ver trailer</string>
@@ -297,7 +297,7 @@
   <string id="31267">Activar CDArt en Visualizacion de Musica</string>
   <string id="31268">Activar Breadcrumbs</string>
   <string id="31269">Activar Efecto en Fondos</string>
-  <string id="31270">Deslizamiento de Posters</string>
+  <string id="31270">Deslizar Poster</string>
   <string id="31271">Posters</string>
   <string id="31272">Diseño</string>
   <string id="31273">Overlay de Serie</string>
@@ -307,9 +307,17 @@
   <string id="31277">Lista Wrap</string>
   <string id="31278">Lista Fixed</string>
   <string id="31279">Reproducir Trailers en pantalla completa en todas las vistas</string>
-  <string id="31280">Flags de Media</string>
+  <string id="31280">Flags Multimedia</string>
   <string id="31281">Mostrar Informacion de Video al pausar</string>
-
+  <string id="31282">Cajas Transparentes</string>
+  <string id="31283">InfoWall</string>
+  <string id="31284">Cine</string>
+  <string id="31285">Episodio No.</string>
+  <string id="31286">Activar CDArt en ListView (solo a nivel cancion)</string>
+  <string id="31287">4 Miniaturas</string>
+  <string id="31288">Desactivar Label de Trailer</string>
+  <string id="31289">Items Mas Anchos en el Menu</string>
+  
   <!-- Weather plugin -->
   <string id="31900">MAPAS</string>
   <string id="31901">36 HORAS</string>
