Localized previous next labels - thx paendorz

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -36,6 +36,8 @@
   <string id="31047">Current Preset</string>
   <string id="31048">Visualization Presets</string>
   <string id="31049">End Time</string>
+  <string id="31050">Previous</string>
+  <string id="31051">Next</string>
 
   <!-- Playlist Editor labels -->
   <string id="31055">Open playlist</string>
