--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -36,6 +36,8 @@
   <string id="31047">Preset Actual</string>
   <string id="31048">Presets de Visualizacion</string>
   <string id="31049">Tiempo Fin</string>
+  <string id="31050">Anterior</string>
+  <string id="31051">Siguiente</string>
 
   <!-- Playlist Editor labels -->
   <string id="31055">Abrir playlist</string>
