--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+[B]0.9.7.8[/B]
+- Added new layout for Infopanels: 4 Thumbs.
+- Fixed trailer label positions.
+- Added option to disable trailer label.
+- Added optional CDArt in Songs list view.
+- Changed episode InfoWall.
+- Added option for wider main menu labels (activate in home window options).
+- Integrated fixed from paendorz - thx.
+
 [B]0.9.7.5[/B]
 - Added InfoWall for Episodes/TV Shows/Advanced Launcher
 - Added Cases to InfoWall
