reworked TV Schedule

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -319,6 +319,7 @@
   <string id="31287">4 Thumbs</string>
   <string id="31288">Disable Trailer Label</string>
   <string id="31289">Wider Menu Items</string>
+  <string id="31290">TV SCHEDULE</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
