--- a/language/French/strings.xml
+++ b/language/French/strings.xml
@@ -5,13 +5,13 @@
   <string id="31001">Adorer</string>
   <string id="31002">Détester</string>
   <string id="31003">Options d'alimentation</string>
-  <string id="31004">Working...</string>
+  <string id="31004">En cours...</string>
   <string id="31005">Masquer l'Info</string>
 
   <string id="31007">Plugins</string>
 
   <string id="31020">Récemment Ajouté</string>
-  <string id="31021">Video - Fichiers</string>
+  <string id="31021">Vidéo - Fichiers</string>
   <string id="31022">Musique - Fichiers</string>
   <string id="31023">Lecture</string>
   <string id="31024">Page</string>
@@ -21,8 +21,8 @@
  
   <!-- View Type labels -->
   <string id="31030">Liste complète</string>
-  <string id="31031">Pic Thumbs</string>
-  <string id="31032">Image Wrap</string>
+  <string id="31031">Photo Miniatures</string>
+  <string id="31032">Image Enroulez</string>
   <string id="31033">Info</string>
 
   <!-- Extra labels -->
@@ -36,6 +36,8 @@
   <string id="31047">Préréglage actuel</string>
   <string id="31048">Préréglages de visualisation</string>
   <string id="31049">Heure de fin</string>
+  <string id="31050">Précédent</string>
+  <string id="31051">Suivant</string>
 
   <!-- Playlist Editor labels -->
   <string id="31055">Ouvrir la liste de lecture</string>
@@ -61,7 +63,7 @@
   <string id="31114">Plusieurs images</string>
   <string id="31115">Modifier</string>
   <string id="31116"></string>
-  <string id="31117">Afficher les vidéos récemment ajoutées</string>
+  <string id="31117">Afficher les widgets Films, Séries TV ou Musiques récemment ajoutées</string>
   <string id="31118">Sous-menu de la page d'accueil</string>
   <string id="31119">Activer le bouton personnalisé</string>
   <string id="31120">Texte du bouton</string>
@@ -70,20 +72,20 @@
   <string id="31123">Utilisez "affiches" au lieu de "Bannières" pour les Séries TV</string>
   <string id="31126">Activer le script Lyrics sur l'OSD musique</string>
   <string id="31127">Chemin vers l'Add-On Lyrics</string>
-  <string id="31128">Lyrics</string>
+  <string id="31128">Paroles</string>
   <string id="31129">Activer le téléchargement des Sous-titres sur l'OSD vidéo</string>
   <string id="31130">Chemin vers l'Add-On Subtitle</string>
 
   <!-- Script labels -->
   <string id="31200">Raccourcis</string>
   <string id="31201">Catégories</string>
-  <string id="31202">Show Cast</string>
+  <string id="31202">Voir le casting</string>
   <string id="31203">Choisissez votre chanson</string>
   <string id="31204">Section Liens</string>
   <string id="31205">Source Lyrics</string>
 
   <!-- Extra labels -->
-  <string id="31300">Temp actuel</string>
+  <string id="31300">Heure actuel</string>
   <string id="31301">Dernière mise à jour</string>
   <string id="31302">Menu</string>
   <string id="31303"></string>
@@ -184,7 +186,7 @@
   <string id="31125">Afficher en arrière plan "Lecture en cours"</string>
   <string id="31142">Afficher le Fanart de l'album en visualisation</string>
   <string id="31107">Masquer les "Flags" en mode Liste</string>
-  <string id="31104">CDart affiché en visualisation musical</string>
+  <string id="31104">Visualisation musicale d'origine d'Aeon</string>
   <string id="31105">Verrouiller le menu principal</string>
   <string id="31028">Vitrine</string>
   <string id="31029">Vitrine</string>
@@ -193,15 +195,15 @@
   <string id="31152">Boîtier CD</string>
   <string id="31153">Petite Liste</string>
   <string id="31154">EN COURS DE CHARGEMENT</string>
-  <string id="31155">ATTENDEZ S'IL VOUS PLAÎT</string>
+  <string id="31155">PATIENTEZ S'IL VOUS PLAÎT</string>
   <string id="31156">Réalisé par</string>
   <string id="31157">Écrit par</string>
-  <string id="31158">Temps actuel</string>
+  <string id="31158">Heure actuel</string>
   <string id="31159">Sourdine</string>
   <string id="31160">DERNIÈRE MISE À JOUR:</string>
   <string id="31161">PRENDRE:</string>
   <string id="31162">Bande-Annonces</string>
-  <string id="31163">Meilleures</string>
+  <string id="31163">Diverses</string>
   <string id="31164">Trier</string>
   <string id="31165">Petite Liste</string>
   <string id="31166">Informations</string>
@@ -218,7 +220,7 @@
   <string id="31176">Activer le bouton liste de lecture</string>
   <string id="31177">Ajouter un bouton liste de lecture dans le sous-menu Musiques</string>
   <string id="31178">Ajouter un bouton liste de lecture dans le sous-menu Séries TV</string>
-  <string id="31179">Activer le mode kiosque (Désactive le Menu Media)</string>
+  <string id="31179">Activer le mode kiosque (Désactive le Menu Média)</string>
   <string id="31180">Activer le mode Kiosque alternatif (Cache les options dans le menu Médias)</string>
   <string id="31181">Ajouter la liste de lecture vidéo au menu Accueil</string>
   <string id="31182">Activer les "Extrathumbs" dans la vue Vitrine</string>
@@ -246,13 +248,13 @@
   <string id="31221">Film recommandé</string>
   <string id="31222">Films recommandés</string>
   <string id="31212">- Afficher les derniers films</string>
-  <string id="31213">- Affichage Aléatoire de films</string>
+  <string id="31213">- Affichage aléatoire des films</string>
   <string id="31214">- Afficher les dernieres séries TV</string>
-  <string id="31215">- Affichage Aléatoire d'épisodes</string>
+  <string id="31215">- Affichage aléatoire des épisodes</string>
   <string id="31216">- Afficher les dernieres chansons</string>
-  <string id="31211">- Affichage Aléatoire des chansons</string>
+  <string id="31211">- Affichage aléatoire des chansons</string>
   <string id="31223">- Afficher les derniers posters de films</string>
-  <string id="31224">- Affichage Aléatoire des posters de films</string>
+  <string id="31224">- Affichage aléatoire des posters de films</string>
   <string id="31225">Audio/Sub</string>
   <string id="31226">Masquer Flags</string>
   <string id="31227">- Disque de vinyle utiliser par défaut pour CDArt</string>
@@ -267,21 +269,21 @@
   <string id="31237">Pressez GAUCHE pour la B.A.</string>
   <string id="31238">Bouton Bande-annonce</string>
   <string id="31239">Bande-annonce étiquette</string>
-  <string id="31240">Affichage "New"</string>
-  <string id="31241">Affichage "Watched"</string>
+  <string id="31240">Voir "New"</string>
+  <string id="31241">Voir "Watched"</string>
   <string id="31242">Le sous-menu des films utilise le script "Cinema Experience" par Défaut</string>
   <string id="31243">calendrier</string>
   <string id="31244">CDArt activé sur l'accueil pendant la lecture</string>
-  <string id="31245">Afficher Résumé</string>
-  <string id="31246">Afficher Résumé grandes lignes</string>
+  <string id="31245">Voir le Résumé</string>
+  <string id="31246">Voir le Résumé Court</string>
   <string id="31247">Afficher Genre</string>
   <string id="31248">Boîtier BR/DVD</string>
   <string id="31249">Utilisez la barre classique d'Aeon pour le menu d'accueil</string>
   <string id="31250">- Transparence</string>
   <string id="31251">Utilisez le menu Style Verre de la barre d'acceuil</string>
-  <string id="31252">Ajouter Favoris au sous-menu Films</string>
-  <string id="31253">Ajouter Favoris au sous-menu Musiques</string>
-  <string id="31254">Ajouter Favoris au sous-menu Séries TV</string>
+  <string id="31252">Ajouter un favoris au sous-menu Films</string>
+  <string id="31253">Ajouter un favoris au sous-menu Musiques</string>
+  <string id="31254">Ajouter un favoris au sous-menu Séries TV</string>
   <string id="31255">- Disque Blu-Ray utiliser par défaut pour CDArt</string>
   <string id="31256">Utilisez la liste enroulée en vue Paysage et Vitrine</string>
   <string id="31257">Détails</string>
@@ -291,18 +293,32 @@
   <string id="31261">Détachez les stats des bibliothèques du menu principal</string>
   <string id="31262">Détachez le flux RSS du menu principal</string>
   <string id="31263">Activer l'arrière-plans animés</string>
-  <string id="31264">Effet de fumée d'arrière-plan sur les panneaux</string>
+  <string id="31264">Effet de fumée sur les boîtes de dialogue</string>
   <string id="31265">Petit affichage pour le scanning et le téléchargement</string>
   <string id="31266">AVANCER</string>
-  <string id="31267">Activer CDArt en visualisation musical</string>
+  <string id="31267">- Activer le CDArt</string>
   <string id="31268">Activer le fil d'Ariane</string>
   <string id="31269">Activer l'effet de fumée pour l'arriere plan</string>
   <string id="31270">Diapo d'Affiche</string>
   <string id="31271">Affiches</string>
   <string id="31272">Modèle</string>
   <string id="31273">Show Overlay</string>
-  <string id="31274">S'il vous plaît Choisissez un modèle dans le menu Media [CR] (Appuyez sur Haut pour activer le menu Média)</string>
+  <string id="31274">S'il vous plaît Choisissez un modèle dans le menu Média [CR] (Appuyez sur Haut pour activer le menu Média)</string>
   <string id="31275">Activer l'arrière plan Météo basé sur les conditions actuelles</string>
+  <string id="31276">Utiliser le petit Widget pour la lecture</string>
+  <string id="31277">Liste Wrap</string>
+  <string id="31278">Liste Fixée</string>
+  <string id="31279">Jouer les bandes-annonces en pleine écran dans toutes les vues</string>
+  <string id="31280">Médiaflags</string>
+  <string id="31281">Voir les infos vidéo quand le lecteur est en pause</string>
+  <string id="31282">Cas évidents</string>
+  <string id="31283">Mur Info</string>
+  <string id="31284">Cinéma</string>
+  <string id="31285">Épisode No.</string>
+  <string id="31286">Activer le CDArt dans la vue liste (seulement pour les chansons)</string>
+  <string id="31287">4 Thumbs</string>
+  <string id="31288">Étiquette Bande-annonce Désactiver</string>
+  <string id="31289">Espacements du menu élargie</string>
 
   <!-- Weather plugin -->
   <string id="31900">CARTES</string>
@@ -338,7 +354,7 @@
   <string id="31940">Pression</string>
   <string id="31941">Visibilité</string>
   <string id="31943">Statistiques</string>
-  <string id="31948">Chance Précipitation</string>
+  <string id="31948">Chance de Précipitation</string>
 
   <string id="31970">Récupération des infos météo...</string>
   <string id="31971">Cliquez sur le bouton vidéo pour jouer</string>
