--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
-[B]0.9.7.8[/B]
-- Added new layout for Infopanels: 4 Thumbs.
+[B]0.9.8[/B]
+- Added new layout for Infopanels: 4 Thumbs - thx Shinu for the graphics.
 - Fixed trailer label positions.
 - Added option to disable trailer label.
 - Added optional CDArt in Songs list view.
