--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]0.9.8.1[/B]
+- Reworked LowList view.
+- Reworked TV Schedule.
+- Wall background is more transparent.
+- Added support for folder.jpg for movie info.
+
 [B]0.9.8[/B]
 - Added new layout for Infopanels: 4 Thumbs - thx Shinu for the graphics.
 - Fixed trailer label positions.
