Added Viewtype BigFan.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.9.8.2[/B]
+- Added Viewtype BigFan for Movies and TVShows.
+- Several fixes and optimizations.
+
 [B]0.9.8.1[/B]
 - Reworked LowList view.
 - Reworked TV Schedule.
