--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -320,6 +320,7 @@
   <string id="31288">Disable Trailer Label</string>
   <string id="31289">Wider Menu Items</string>
   <string id="31290">TV SCHEDULE</string>
+  <string id="31291">BigFan</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
