Added TV-Y and TV-Y7 flags.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]0.9.8.3[/B]
+- Added trailer label for BigFan view (breadcrumbs only)
+
 [B]0.9.8.2[/B]
 - Added Viewtype BigFan for Movies and TVShows.
 - Several fixes and optimizations.
