Added animated weather icons support

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+[B]0.9.8.4[/B]
+- Added option for 6 custom favorites in main menu.
+- Added labels for special episodes.
+- Added TV-Y and TV-Y7 flags.
+- Added support for animated weather icons. See first post on forum how to activate.
+- Several fixes.
+
 [B]0.9.8.3[/B]
 - Added trailer label for BigFan view (breadcrumbs only)
 
