--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -321,6 +321,7 @@
   <string id="31289">Wider Menu Items</string>
   <string id="31290">TV SCHEDULE</string>
   <string id="31291">BigFan</string>
+  <string id="31292">Enable Animated Weather Icons</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
