spanisch strings update - thx paendorz

--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -319,6 +319,9 @@
   <string id="31287">4 Miniaturas</string>
   <string id="31288">Desactivar Label de Trailer</string>
   <string id="31289">Items Mas Anchos en el Menu</string>
+  <string id="31290">PROGRAMACION DE TV</string>
+  <string id="31291">BigFan</string>
+  <string id="31292">Activar iconos animados para el clima</string>
   
   <!-- Weather plugin -->
   <string id="31900">MAPAS</string>
