reworked DialogVideoInfo.xml

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+[B]0.9.8.5[/B]
+- fixed seek labels
+- Added mono and dts20 for videoinfo.
+- Spanish strings update - thx paendorz
+- Added scrollbar to BigFan view.
+- fixed showcase spot showing up in infolist.
+- fixed overlapping episode numbers in infolist.
+- fixed overlapping flags.
+- fixed background infowall in programs.
+- removed end and current time prefixes in DialogSeekBar.xml and switched pos with duration
+- Cinema button is always visible when the script is installed.
+- Reworked DialogVideoInfo for TV Shows and Episodes.
+
 [B]0.9.8.4[/B]
 - Added option for 6 custom favorites in main menu.
 - Added labels for special episodes.
