Added viewtype Episode. Removed all largeimage, added options for infowall.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -322,6 +322,7 @@
   <string id="31290">TV SCHEDULE</string>
   <string id="31291">BigFan</string>
   <string id="31292">Enable Animated Weather Icons</string>
+  <string id="31293">Square</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
