--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+[B]0.9.9[/B]
+- Added viewtype Episode, all credits to the creators of Alaska.
+- Added option for InfoWall to show square icons in advanced launcher.
+- Added option for InfoWall to show landscape fot TVShows.
+- Home OSD now follows theme.
+- Info in Recent Added episodes now pulls poster.jpg.
+- Added videowindow to more views.
+- TV Schedule is now clickable - navigates to respective tvshow in library.
+
 [B]0.9.8.5[/B]
 - fixed seek labels
 - Added mono and dts20 for videoinfo.
@@ -10,6 +19,7 @@
 - removed end and current time prefixes in DialogSeekBar.xml and switched pos with duration
 - Cinema button is always visible when the script is installed.
 - Reworked DialogVideoInfo for TV Shows and Episodes.
+- Updated studio logo's - thx Shinu.
 
 [B]0.9.8.4[/B]
 - Added option for 6 custom favorites in main menu.
