--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+[B]1.0[/B]
+- Videwindow for Lowlist is back to old one.
+- Flag fixes.
+- Chapter label fix.
+- Added tv logo to now playing widget.
+- Music menu item defaults to Albums, added root entry to sub-menu.
+- Fixed overlapping videowindow when poster widget has focus.
+- Added MusicVideos to dialogvideoinfo.
+
 [B]0.9.9[/B]
 - Added viewtype Episode, all credits to the creators of Alaska.
 - Added option for InfoWall to show square icons in advanced launcher.
