--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 - Music menu item defaults to Albums, added root entry to sub-menu.
 - Fixed overlapping videowindow when poster widget has focus.
 - Added MusicVideos to dialogvideoinfo.
+- Fixed Subtitle Service selector overlapping movie poster.
 
 [B]0.9.9[/B]
 - Added viewtype Episode, all credits to the creators of Alaska.
