--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,10 @@
 - Fixed overlapping videowindow when poster widget has focus.
 - Added MusicVideos to dialogvideoinfo.
 - Fixed Subtitle Service selector overlapping movie poster.
+- Fixed additional addon settings opening underneath settings dialog.
+- Fixed status in Addon InfoWall, now showing download progress.
+- Added CINEMA submenu button.
+- Added LowList to musicfiles.
 
 [B]0.9.9[/B]
 - Added viewtype Episode, all credits to the creators of Alaska.
