--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@
 - Fixed status in Addon InfoWall, now showing download progress.
 - Added CINEMA submenu button.
 - Added LowList to musicfiles.
+- Fixed gradient on classic home + added gradient to other versions
 
 [B]0.9.9[/B]
 - Added viewtype Episode, all credits to the creators of Alaska.
