changed streaming label to infinity symbol.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1" standalone="yes"?>
+ï»¿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
   <!-- Misc labels -->
   <string id="31000">Change Your</string>
@@ -134,14 +134,14 @@
   <string id="31392">Arial based</string>
 
   <!-- Description Labels  -->
-  <string id="31400">[B]CONFIGURE APPEARANCE SETTINGS[/B][CR][CR]Change the skin · Set language and region · Change file listing options[CR]Set up a screensaver</string>
-  <string id="31401">[B]CONFIGURE VIDEO SETTINGS[/B][CR][CR]Manage your video library · Set video playback options · Change video listing options[CR]Set subtitle fonts</string>
-  <string id="31402">[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library · Set music playback options · Change music listing options[CR]Setup song submission · Set karaoke options</string>
-  <string id="31403">[B]CONFIGURE PICTURE SETTINGS[/B][CR][CR]Set picture listing options · Configure slideshows</string>
+  <string id="31400">[B]CONFIGURE APPEARANCE SETTINGS[/B][CR][CR]Change the skin Â· Set language and region Â· Change file listing options[CR]Set up a screensaver</string>
+  <string id="31401">[B]CONFIGURE VIDEO SETTINGS[/B][CR][CR]Manage your video library Â· Set video playback options Â· Change video listing options[CR]Set subtitle fonts</string>
+  <string id="31402">[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library Â· Set music playback options Â· Change music listing options[CR]Setup song submission Â· Set karaoke options</string>
+  <string id="31403">[B]CONFIGURE PICTURE SETTINGS[/B][CR][CR]Set picture listing options Â· Configure slideshows</string>
   <string id="31404">[B]CONFIGURE WEATHER SETTINGS[/B][CR][CR]Set three cities to collect weather information</string>
-  <string id="31405">[B]CONFIGURE NETWORK SETTINGS[/B][CR][CR]Setup control of XBMC via UPnP and HTTP · Configure file sharing[CR]Set internet access options</string>
-  <string id="31406">[B]CONFIGURE SYSTEM SETTINGS[/B][CR][CR]Setup and calibrate displays · Configure audio output · Setup remote controls[CR]Set power saving options · Enable debugging · Setup master lock</string>
-  <string id="31408">[B]CONFIGURE ADD-ONS[/B][CR][CR]Manage your installed Add-ons · Browse for and install Add-ons from xbmc.org[CR]Modify Add-on settings</string>
+  <string id="31405">[B]CONFIGURE NETWORK SETTINGS[/B][CR][CR]Setup control of XBMC via UPnP and HTTP Â· Configure file sharing[CR]Set internet access options</string>
+  <string id="31406">[B]CONFIGURE SYSTEM SETTINGS[/B][CR][CR]Setup and calibrate displays Â· Configure audio output Â· Setup remote controls[CR]Set power saving options Â· Enable debugging Â· Setup master lock</string>
+  <string id="31408">[B]CONFIGURE ADD-ONS[/B][CR][CR]Manage your installed Add-ons Â· Browse for and install Add-ons from xbmc.org[CR]Modify Add-on settings</string>
 
   <string id="31421">Select your XBMC user Profile[CR]to login and continue</string>
   
@@ -180,8 +180,8 @@
   <string id="31147">Show playlist</string>
   <string id="31148">Show Timepanel</string>
   <string id="31149">This will shutdown XBMC! [CR]Are you sure?</string>
-  <string id="31407">[B]CONFIGURE SKIN SETTINGS[/B][CR][CR]Setup the Aeon Nox skin · Add and remove home menu items[CR]Change skin backgrounds</string>
-  <string id="31409">[B]MONITOR YOUR SYSTEM[/B][CR][CR]Check out your hardware · Monitor CPU usage[CR]Check XBMC revision number</string>
+  <string id="31407">[B]CONFIGURE SKIN SETTINGS[/B][CR][CR]Setup the Aeon Nox skin Â· Add and remove home menu items[CR]Change skin backgrounds</string>
+  <string id="31409">[B]MONITOR YOUR SYSTEM[/B][CR][CR]Check out your hardware Â· Monitor CPU usage[CR]Check XBMC revision number</string>
   <string id="31124">Bigger top bar on music OSD</string>
   <string id="31125">Show Background "Now Playing" Visualization</string>
   <string id="31142">Show Album level fanart in Visualization</string>
@@ -323,6 +323,7 @@
   <string id="31291">BigFan</string>
   <string id="31292">Enable Animated Weather Icons</string>
   <string id="31293">Square</string>
+  <string id="31294">âˆž</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
