Music button defaults to opening Music, option added for opening Albums view default.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -323,6 +323,8 @@
   <string id="31291">BigFan</string>
   <string id="31292">Enable Animated Weather Icons</string>
   <string id="31293">Square</string>
+  <string id="31293">Square</string>
+  <string id="31299">Music button always opens "Albums" view</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
