more fixes to eliminate "unsupported control type 3" errors.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -268,7 +268,7 @@
   <string id="31236">BannerPlex</string>
   <string id="31237">Press LEFT to see trailer</string>
   <string id="31238">Trailer Button</string>
-  <string id="31239">Trailer Label</string>
+  <string id="31239">-</string>
   <string id="31240">Show New</string>
   <string id="31241">Show Watched</string>
   <string id="31242">Submenu of Movies Uses Cinema Experience Script as Default</string>
