updated changelog and version number

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,19 @@
+[B]1.1.0[/B]
+- Fixed "new" flag for small movie wall.
+- Fixed TvTunes support.
+- Changed "Streaming.." label to infinity symbol.
+- Fixed overlapping progressbar in default Home OSD.
+- Fixed overlapping music title with playlist in Home Now Playing widget.
+- Fixed: Playlist widget now visible when random/latest widgets are deactivated.
+- Fixed wrong fanartcode for current conditions (only effected animated icons)
+- Fixed DialogFileStacking.xml
+- Fixed missing Stack button for videofiles.
+- Fixed fast scrolling of plot in video info screen.
+- Fixed Last.FM buttons in music OSD.
+- Lyrics and Subtitle buttons now ask for input if no add-on is selected.
+- Music button no longer opens library by default. Option added in General settings.
+- Fixed "unsupported control type 3" error.
+
 [B]1.0.0[/B]
 - Videwindow for Lowlist is back to old one.
 - Flag fixes.
