Updated fonts + added "Light" fontset.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -130,7 +130,7 @@
 
   <!-- Skin Fontsets -->
   <string id="31390">Skin default</string>
-  <string id="31391">Skin default with no Caps</string>
+  <string id="31391">Light</string>
   <string id="31392">Arial based</string>
 
   <!-- Description Labels  -->
