Added igotdvd's TVGuide.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -325,6 +325,7 @@
   <string id="31293">Square</string>
   <string id="31293">Square</string>
   <string id="31299">Music button always opens "Albums" view</string>
+  <string id="31360">Upcoming</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
