Added skin settings dialog to music osd

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -324,6 +324,7 @@
   <string id="31292">Enable Animated Weather Icons</string>
   <string id="31293">Square</string>
   <string id="31293">Square</string>
+  <string id="31297">Show fanart slideshow from your music collection</string>
   <string id="31299">Music button always opens "Albums" view</string>
   <string id="31360">Upcoming</string>
 
