fixed navigation + added disable fanart option.

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -327,6 +327,7 @@
   <string id="31297">Show fanart slideshow from your music collection</string>
   <string id="31299">Music button always opens "Albums" view</string>
   <string id="31360">Upcoming</string>
+  <string id="31361">Disable fanart</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
