--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -189,7 +189,7 @@
   <string id="31104">Use Original Aeon Music Visualization</string>
   <string id="31105">Lock main menu</string>
   <string id="31028">Showcase</string>
-  <string id="31029">Showcase</string>
+  <string id="31029">Showcase2</string>
   <string id="31150">Landscape</string>
   <string id="31151">DVD Case</string>
   <string id="31152">CD Case</string>
@@ -328,6 +328,7 @@
   <string id="31299">Music button always opens "Albums" view</string>
   <string id="31360">Upcoming</string>
   <string id="31361">Disable fanart</string>
+  <string id="31364">Platform</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
