Changed list thumbs + code cleanup

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -328,6 +328,7 @@
   <string id="31299">Music button always opens "Albums" view</string>
   <string id="31360">Upcoming</string>
   <string id="31361">Disable fanart</string>
+  <string id="31362">Round Covers</string>
   <string id="31364">Platform</string>
 
   <!-- Weather plugin -->
