--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -293,12 +293,12 @@
   <string id="31261">Detach Library Stats from Main Menu</string>
   <string id="31262">Detach RSS Feed from Main Menu</string>
   <string id="31263">Enable Animated Backgrounds</string>
-  <string id="31264">Enable Background Effect on Panels</string>
+  <string id="31264">Enable Background Effect on Panels [I](Can increase CPU if VSync is always enabled!)   [/I]</string>
   <string id="31265">Smaller Pop-up Dialogs</string>
   <string id="31266">FORWARD</string>
   <string id="31267">Enable CDArt in Music Visualization</string>
   <string id="31268">Enable Breadcrumbs</string>
-  <string id="31269">Enable Background Effect</string>
+  <string id="31269">Enable Background Effect [I](Can increase CPU if VSync is always enabled!)   [/I]</string>
   <string id="31270">Poster Slide</string>
   <string id="31271">Posters</string>
   <string id="31272">Layout</string>
