Added warning to background effect setting

--- a/language/French/strings.xml
+++ b/language/French/strings.xml
@@ -293,12 +293,12 @@
   <string id="31261">Détachez les stats des bibliothèques du menu principal</string>
   <string id="31262">Détachez le flux RSS du menu principal</string>
   <string id="31263">Activer l'arrière-plans animés</string>
-  <string id="31264">Effet de fumée sur les boîtes de dialogue [I](Peut augmenter CPU si VSync est toujours activé!)   [/I]</string>
+  <string id="31264">Effet de fumée [I](Peut augmenter l'utilisation du CPU si VSync est réglé sur "toujours activé")   [/I]</string>
   <string id="31265">Petit affichage pour le scanning et le téléchargement</string>
   <string id="31266">AVANCER</string>
   <string id="31267">- Activer le CDArt</string>
   <string id="31268">Activer le fil d'Ariane</string>
-  <string id="31269">Activer l'effet de fumée pour l'arriere plan [I](Peut augmenter CPU si VSync est toujours activé!)   [/I]</string>
+  <string id="31269">Effet de fumée [I](Peut augmenter l'utilisation du CPU si VSync est réglé sur "toujours activé")   [/I]</string>
   <string id="31270">Diapo d'Affiche</string>
   <string id="31271">Affiches</string>
   <string id="31272">Modèle</string>
