--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -330,6 +330,7 @@
   <string id="31361">Disable fanart</string>
   <string id="31362">Round Covers</string>
   <string id="31364">Platform</string>
+  <string id="31368">Press RIGHT to see trailer</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
