--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+[B]1.3.1[/B]
+- Fixed thumbs not showing in list view.
+- Fixed invisible now playing screen in list view.
+- Fixed navigation issues with Random/Latest Posters Widget
+
 [B]1.3.0[/B]
 - Fixed Playlist widget visibility.
 - Fixed: Custom startup focus runs every time the home window is activated if recently added items is disabled.
