--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]1.3.2[/B]
+- Added weather widget
+
 [B]1.3.1[/B]
 - Fixed thumbs not showing in list view.
 - Fixed invisible now playing screen in list view.
