--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 [B]1.3.2[/B]
-- Added weather widget
+- Added weather widget (press up on weather menu when menu is locked in normal position to switch high/low position)
 
 [B]1.3.1[/B]
 - Fixed thumbs not showing in list view.
