--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -334,6 +334,7 @@
   <string id="31369">This will replace most of your Aeon Nox skin settings![CR]Are you sure?</string>
   <string id="31370">Set recommended options [I](Shortcuts and paths remain intact)   [/I]</string>
   <string id="31371">Enable Artist Slideshow fanart</string>
+  <string id="31373">Show fanart slideshow from your video collection</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
