--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]1.3.3[/B]
+- Added invisible OK button - You can now press OK and/or ESC to exit dialog.
+- Synchronize weather labels on home widget.
+
 [B]1.3.2[/B]
 - Added weather widget (press up on weather menu when menu is locked in normal position to switch high/low position)
 - Added option to show video fanart in Music visualization.
