--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]1.3.3[/B]
-- Added invisible OK button - You can now press OK and/or ESC to exit dialog.
+- Added invisible OK button - You can now press OK and/or ESC to exit OK dialog.
+- Added invisible Cancel button - You can now press OK and/or ESC to exit progress dialog.
 - Synchronize weather labels on home widget.
 
 [B]1.3.2[/B]
