--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 - Added invisible OK button - You can now press OK and/or ESC to exit OK dialog.
 - Added invisible Cancel button - You can now press OK and/or ESC to exit progress dialog.
 - Synchronize weather labels on home widget.
+- Fixed overlapping infolabels in LowList.
 
 [B]1.3.2[/B]
 - Added weather widget (press up on weather menu when menu is locked in normal position to switch high/low position)
