--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]1.3.4[/B]
+- Seperate Infopanel visibility for tvshows and episodes.
+
 [B]1.3.3[/B]
 - Added invisible OK button - You can now press OK and/or ESC to exit OK dialog.
 - Added invisible Cancel button - You can now press OK and/or ESC to exit progress dialog.
