--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 [B]1.3.5[/B]
 - Weather widget now shows weather plus info if it's the current weather addon.
-- Increased font size for plot in VideoInfo and InfoWall.
+- Increased font size for plot in VideoInfo.
 - Increased font size for plot in recent/random widget.
+- Increased font size for plot/album/artist/add-on description in InfoWall
 
 [B]1.3.4[/B]
 - Seperate Infopanel visibility for tvshows and episodes.
