--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -335,6 +335,7 @@
   <string id="31369">This will replace most of your Aeon Nox skin settings![CR]Are you sure?</string>
   <string id="31370">Set recommended options [I](Shortcuts and paths remain intact)   [/I]</string>
   <string id="31371">Enable Artist Slideshow fanart</string>
+  <string id="31372">Show Info</string>
   <string id="31373">Show fanart slideshow from your video collection</string>
   <string id="31374">Current</string>
 
