--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]1.4.0[/B]
+- Changed default layout of high LowList to show only plot/year/runtime. ("Show Info" option added).
+- Added Music and Movies genre fanart and icons:
+  To activate drop the icons and fanart in the corresponding folders in skin.aeon.nox/extras/genre
+  All files are expected to have .jpg extension.
+
 [B]1.3.5[/B]
 - Weather widget now shows weather plus info if it's the current weather addon.
 - Increased font size for plot in VideoInfo.
