--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]1.4.1[/B]
+- Added weather submenu with all home window options for the weather widget.
+
 [B]1.4.0[/B]
 - Changed default layout of high LowList to show only plot/year/runtime. ("Show Info" option added).
 - Added Music and Movies genre fanart and icons:
