--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]1.4.2[/B]
+- Volume dialog no longer shows volume when passthrough is active.
+
 [B]1.4.1[/B]
 - Added weather submenu with all home window options for the weather widget.
 - Added wraplist for DialogVideoInfo, DialogAlbumInfo and SongInfo.
