--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]1.4.4[/B]
 - Watched / New overlay toggles no longer requires reload skin.
+- Added CDArt en Artist logo to LowList (place artist logos in extras/logos/artists folder.)
 
 [B]1.4.3[/B]
 - "Submenu of movies uses Cinema Experience Script as default" can only be enabled if the cse script is installed.
