--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -339,6 +339,7 @@
   <string id="31373">Show fanart slideshow from your video collection</string>
   <string id="31374">Current</string>
   <string id="31375">Animations</string>
+  <string id="31377">CDArt</string>
 
   <!-- Weather plugin -->
   <string id="31900">MAPS</string>
