--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
+[B]1.5.0[/B]
+- Added view "Carousel".
+- Added CDArt en Artist logo to LowList (place artist logos in extras/logos/artists folder.)
+- Fixed: cut off label with more than 99 episodes in list view (seasons).
+
 [B]1.4.4[/B]
 - Watched / New overlay toggles no longer requires reload skin.
-- Added CDArt en Artist logo to LowList (place artist logos in extras/logos/artists folder.)
 
 [B]1.4.3[/B]
 - "Submenu of movies uses Cinema Experience Script as default" can only be enabled if the cse script is installed.
