Added default buttons to pictures section

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 - Added CDArt en Artist logo to LowList (place artist logos in extras/logos/artists folder.)
 - Fixed: cut off label with more than 99 episodes in list view (seasons).
 - Added option to enable animated backgrounds only on home window.
+- Added default buttons in pictures section.
 
 [B]1.4.4[/B]
 - Watched / New overlay toggles no longer requires reload skin.
