--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 - Added missing default buttons in pictures section.
 - Added "Manual add to library" button to musiclibrary.
 - Added missing default buttons to musicfiles section.
+- Unified all select and settings dialogs.
 
 [B]1.4.4[/B]
 - Watched / New overlay toggles no longer requires reload skin.
