Fixed unicode characters on home menu.

--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -322,7 +322,21 @@
   <string id="31290">PROGRAMACION DE TV</string>
   <string id="31291">BigFan</string>
   <string id="31292">Activar iconos animados para el clima</string>
-  
+
+  <!-- Home Menu -->
+  <string id="31500">IMÁGENES</string>
+  <string id="31501">MÚSICA</string>
+  <string id="31502">PELÍCULAS</string>
+  <string id="31503">SERIES TV</string>
+  <string id="31504">VÍDEOS</string>
+  <string id="31505">PROGRAMAS</string>
+  <string id="31506">SISTEMA</string>
+  <string id="31507">ADD-ONS</string>
+  <string id="31508">APAGAR</string>
+  <string id="31509">FAVORITOS</string>
+  <string id="31510">EL TIEMPO</string>
+  <string id="31511">REPRODUCIR DISCO</string>
+
   <!-- Weather plugin -->
   <string id="31900">MAPAS</string>
   <string id="31901">36 HORAS</string>
