--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@
 - Added "Manual add to library" button to musiclibrary.
 - Added missing default buttons to musicfiles section.
 - Unified all select and settings dialogs.
+- Fixed special characters not uppercase on home menu.
 
 [B]1.4.4[/B]
 - Watched / New overlay toggles no longer requires reload skin.
