--- a/language/French/strings.xml
+++ b/language/French/strings.xml
@@ -330,6 +330,20 @@
   <string id="31362">Pochettes arrondies</string>
   <string id="31364">Plate-forme</string>
 
+  <!-- Home Menu -->
+  <string id="31500">IMAGES</string>
+  <string id="31501">MUSIQUE</string>
+  <string id="31502">FILMS</string>
+  <string id="31503">SÉRIES TV</string>
+  <string id="31504">VIDÉOS</string>
+  <string id="31505">PROGRAMMES</string>
+  <string id="31506">SYSTÈME</string>
+  <string id="31507">ADD-ONS</string>
+  <string id="31508">ETEINDRE</string>
+  <string id="31509">FAVORIS</string>
+  <string id="31510">MÉTÉO</string>
+  <string id="31511">LIRE LE DISQUE</string>
+
   <!-- Weather plugin -->
   <string id="31900">CARTES</string>
   <string id="31901">36 HEURES</string>
